--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -78,6 +78,7 @@ footer {
     @media (max-width: 991px) {
       font-size: 20px;
       line-height: 22px;
+      max-width: 160px;
 
       span {
         font-size: 20px !important;
