--- a/scss/header.scss
+++ b/scss/header.scss
@@ -197,6 +197,7 @@ header {
 
       img {
         height: 100%;
+        width: 100%;
         object-fit: contain;
       }
 
@@ -204,6 +205,11 @@ header {
         font-size: 20px;
         line-height: 22px;
         height: 60px;
+      }
+
+      @media (max-width: 575px) {
+        height: 50px;
+        width: 102px;
       }
 
       span {
